kubernetes/apps/mediaserver/radarr-new/virtual-service.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/networking.istio.io/virtualservice_v1alpha3.json
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: radarr-new
spec:
  hosts:
    - radarr-new.milton.mcf.io
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 7878
            host: radarr-new.mediaserver.svc.cluster.local
